[LCT-4]: Add ttl for tokens